[package]
name = "radium"
version = "0.1.0"
edition = "2021"
description = "A minimal HTML rendering engine with a native GUI window"

[[bin]]
name = "radium"
path = "src/main.rs"

[dependencies]
# Image decoding (PNG, JPEG)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Window management & event loop
winit = "0.30"

# Software rasterizer (CPU-based 2D drawing)
tiny-skia = "0.11"

# Connect winit window surface to tiny-skia pixel buffer
softbuffer = "0.4"

# CPU font rasterizer (pure Rust, no system dependencies)
fontdue = "0.7"

[profile.release]
opt-level = 3
